[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/Choose_level.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/fonts/arrow2.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/fonts/arrow1.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/fonts/new_theme.tres" type="Theme" id=4]
[ext_resource path="res://ASSETS/fonts/Alkalami-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.254902 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 60
outline_color = Color( 0.388235, 0.388235, 0.388235, 1 )
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1278.0
margin_bottom = 799.0
color = Color( 0.596078, 0.796078, 0.937255, 1 )

[node name="Levels" type="Label" parent="."]
margin_left = 116.0
margin_top = 75.0
margin_right = 238.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Levels:"

[node name="coinscollected" type="Label" parent="."]
margin_left = 825.0
margin_top = 77.0
margin_right = 1144.0
margin_bottom = 154.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "collectibles found:"
align = 1

[node name="Panel_level1" type="Panel" parent="."]
margin_left = 111.0
margin_top = 154.0
margin_right = 1149.0
margin_bottom = 249.0
custom_styles/panel = SubResource( 4 )

[node name="level1" type="LinkButton" parent="Panel_level1"]
margin_left = 42.0
margin_top = 3.0
margin_right = 232.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 95, 58 )
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Level 1"
underline = 2

[node name="coins" type="Label" parent="Panel_level1"]
margin_left = 783.0
margin_top = 11.0
margin_right = 1028.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0.407843, 0.12549, 0.054902, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="Panel_level2" type="Panel" parent="."]
margin_left = 113.0
margin_top = 278.0
margin_right = 1151.0
margin_bottom = 373.0
custom_styles/panel = SubResource( 4 )

[node name="level2" type="LinkButton" parent="Panel_level2"]
margin_left = 40.0
margin_top = 4.0
margin_right = 230.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 95, 58 )
focus_mode = 2
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Level 2"
underline = 2

[node name="coins" type="Label" parent="Panel_level2"]
margin_left = 783.0
margin_top = 11.0
margin_right = 1028.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0.407843, 0.12549, 0.054902, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="Panel_level3" type="Panel" parent="."]
margin_left = 114.0
margin_top = 405.0
margin_right = 1152.0
margin_bottom = 500.0
custom_styles/panel = SubResource( 4 )

[node name="level3" type="LinkButton" parent="Panel_level3"]
margin_left = 40.0
margin_top = 4.0
margin_right = 230.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 95, 58 )
focus_mode = 2
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Level 3"
underline = 2

[node name="coins" type="Label" parent="Panel_level3"]
margin_left = 783.0
margin_top = 11.0
margin_right = 1028.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0.407843, 0.12549, 0.054902, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="Panel_level4" type="Panel" parent="."]
margin_left = 114.0
margin_top = 533.0
margin_right = 1152.0
margin_bottom = 628.0
custom_styles/panel = SubResource( 4 )

[node name="level4" type="LinkButton" parent="Panel_level4"]
margin_left = 36.0
margin_top = 8.0
margin_right = 226.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( 95, 58 )
focus_mode = 2
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Level 4"
underline = 2

[node name="coins" type="Label" parent="Panel_level4"]
margin_left = 783.0
margin_top = 11.0
margin_right = 1028.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0.407843, 0.12549, 0.054902, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="Panel_level5" type="Panel" parent="."]
margin_left = 116.0
margin_top = 658.0
margin_right = 1154.0
margin_bottom = 753.0
custom_styles/panel = SubResource( 4 )

[node name="level5" type="LinkButton" parent="Panel_level5"]
margin_left = 36.0
margin_top = 8.0
margin_right = 226.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( 95, 58 )
focus_mode = 2
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Level 5"
underline = 2

[node name="coins" type="Label" parent="Panel_level5"]
margin_left = 783.0
margin_top = 11.0
margin_right = 1028.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0.407843, 0.12549, 0.054902, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="Back" type="TextureButton" parent="."]
margin_left = 1173.0
margin_top = 659.0
margin_right = 1247.0
margin_bottom = 755.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true

[connection signal="pressed" from="Panel_level1/level1" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="Panel_level2/level2" to="." method="_on_level2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
